tests/fixtures/negative/skp1-unsupported-chunk-size.hex
534b50310101010000100001
0000000000000000000000000000000000000000000000000000000000000000
0000000000000000
000080000000000800000001
